--- a/tasks/client.yml
+++ b/tasks/client.yml
@@ -19,6 +19,7 @@
   ansible.builtin.template:
     src: upstream_servers.conf.j2
     dest: /etc/chrony/conf.d/upstream_servers.conf
+    mode: '0755'
   when: chrony_upstream_servers
   notify:
     - Restart chrony service
